--- a/Covid_Respiratory care/app/src/main/res/values/strings.xml
+++ b/Covid_Respiratory care/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Covid_Respiratorycare</string>
-    <string name="action_settings">Settings</string>
+    <string name="Main">메인</string>
+    <string name="Map">호흡기 진료 지정 의료기관</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
